--- a/index.html
+++ b/index.html
@@ -6,116 +6,17 @@
 	<meta name="description" content="Keep track of your [Hero] Protector of Stars set grinding !">
 	<meta name="author" content="jballanger">
 	<title>DS Pos</title>
-	<link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap@next/dist/css/bootstrap.min.css"/>
-	<link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div id="app">
 		<vue-simple-spinner size="large" v-if="loading"></vue-simple-spinner>
+		<div class="data-actions">
+			<button id="show-modal" @click="showModal = true">Export</button>
+			<button id="show-modal" @click="showModal = true">Import</button>
+		</div>
+		<modal v-if="showModal" @close="showModal = false" :data="data"></modal>
 		<pos-table :mats="data"></pos-table>
-		<table style="display: none">
-			<thead>
-				<th>#</th>
-				<th>Item</th>
-				<th>Need</th>
-				<th>Have</th>
-				<th>Left</th>
-			</thead>
-			<tbody>
-				<tr class="separator">
-					<th>Misc.</th>
-					<th>Star metal piece</th>
-					<th>81</th>
-					<th>23</th>
-					<th>58</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Serpents force</th>
-					<th>17</th>
-					<th>0</th>
-					<th>17</th>
-				</tr>
-				<tr class="separator">
-					<th>Star stones</th>
-					<th>Taurus</th>
-					<th>70</th>
-					<th>9</th>
-					<th>61</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Cancer</th>
-					<th>65</th>
-					<th>15</th>
-					<th>50</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Virgo</th>
-					<th>30</th>
-					<th>4</th>
-					<th>26</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Scorpio</th>
-					<th>30</th>
-					<th>18</th>
-					<th>12</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Hydra</th>
-					<th>70</th>
-					<th>18</th>
-					<th>52</th>
-				</tr>
-				<tr class="separator table-success">
-					<th>Fragments</th>
-					<th>Taurus</th>
-					<th>12</th>
-					<th>12</th>
-					<th>0</th>
-				</tr>
-				<tr class="table-danger">
-					<th></th>
-					<th>Cancer</th>
-					<th>12</th>
-					<th>12</th>
-					<th>0</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Virgo</th>
-					<th>12</th>
-					<th>12</th>
-					<th>0</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Scorpio</th>
-					<th>24</th>
-					<th>24</th>
-					<th>0</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Hydra</th>
-					<th>10</th>
-					<th>10</th>
-					<th>0</th>
-				</tr>
-				<tr>
-					<th></th>
-					<th>Ophiuchus</th>
-					<th>24</th>
-					<th>24</th>
-					<th>0</th>
-				</tr>
-			</tbody>
-		</table>
 	</div>
 	<script type="text/x-template" id="pos-table-template">
 		<table v-if="mats">
@@ -128,66 +29,56 @@
 			</thead>
 			<tbody>
 				<template v-for="(item, index) in mats">
+					<tr class="table-primary">
+						<th>{{ index | formatIndex }}</th>
+						<th></th>
+						<th></th>
+						<th></th>
+						<th></th>
+					</tr>
 					<template v-for="(quantity, name) in item">
-						<tr>
-							<th>{{ index | singleIndex }}</th>
-							<th>{{ name }}</th>
+						<tr :class="[ ((quantity.need - quantity.have) > 0) ? 'table-danger' : 'table-success' ]">
+							<th></th>
+							<th>{{ name | formatName }}</th>
 							<th>{{ quantity.need }}</th>
 							<th>{{ quantity.have }}</th>
-							<th>0</th>
+							<th>{{ (quantity.need - quantity.have) | formatLeft }}</th>
 						</tr>
 					</template>
 				</template>
 			</tbody>
 		</table>
 	</script>
+	<script type="text/x-template" id="modal-template">
+		<transition name="modal">
+			<div class="modal-mask">
+				<div class="modal-wrapper" @click="$emit('close')">
+					<div class="modal-container" @click.stop>
+						<div class="modal-header">
+							<slot name="header">
+								<h3>JSON data</h3>
+							</slot>
+						</div>
+						<div class="modal-body">
+							<slot name="body">
+								<textarea v-model="jsonData" id="jsonTextarea" rows="5" cols="45"></textarea>
+							</slot>
+						</div>
+						<div class="modal-footer">
+							<slot name="footer">
+								<button class="modal-default-button" @click="$emit('close')">
+									Close
+								</button>
+							</slot>
+						</div>
+					</div>
+				</div>
+			</div>
+		</transition>
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<script src="https://cdn.rawgit.com/dzwillia/vue-simple-spinner/v1.2.5/dist/vue-simple-spinner.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script type="text/javascript">
-		Vue.component('pos-table', {
-			props: ['mats'],
-			template: '#pos-table-template',
-			data: {
-				index: []
-			},
-			filters: {
-				singleIndex: function(val) {
-					if (this.index.indexOf())
-				}
-			}
-		});
-		var vm = new Vue({
-			el: '#app',
-			data: {
-				loading: true,
-				data: null
-			},
-			created: function() {
-				this.fetchData();
-			},
-			methods: {
-				merge: function(obj, obj2) {
-					for (var key in obj2) {
-						for (var key2 in obj2[key]) {
-							obj[key][key2].have = obj2[key][key2].have;
-						}
-					}
-					return obj;
-				},
-				fetchData: function() {
-					axios.all([
-						axios.get('data.json'),
-						axios.get('sample.json')
-					])
-					.then(axios.spread((need, sample) => {
-						var data = this.merge(need.data, sample.data);
-						this.loading = false;
-						this.data = data;
-					}));
-				}
-			}
-		});
-	</script>
+	<script src="script.js"></script>
 </body>
 </html>
