modal specific header

--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 					<div class="modal-container" @click.stop>
 						<div class="modal-header">
 							<slot name="header">
-								<h3>JSON data</h3>
+								<h3>Export JSON</h3>
 									<h5>
 										<a href="https://www.json.org/" target="_blank" rel="noopener noreferrer">What is JSON ?</a> <img src="confused.gif">
 									</h5>
@@ -87,7 +87,7 @@
 					<div class="modal-container" @click.stop>
 						<div class="modal-header">
 							<slot name="header">
-								<h3>JSON data</h3>
+								<h3>Import JSON</h3>
 							</slot>
 						</div>
 						<div class="modal-body">
