--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Keep track of your [Hero] Protector of Stars set grinding !">
 	<meta name="author" content="jballanger">
+	<link rel="icon" href="favicon.ico">
 	<title>DS Pos</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
