--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<export v-if="showExport" :data="data" @close="showExport = false"></export>
 		<import v-if="showImport" v-model="importedData" @close="showImport = false"></import>
 		<pos-table :mats="data"></pos-table>
-		<vue-simple-spinner size="large" v-if="!data"></vue-simple-spinner>
+		<div class="loader" v-if="!data"></div>
 	</div>
 	<script type="text/x-template" id="pos-table-template">
 		<div class="responsive-table">
@@ -109,7 +109,6 @@
 		</transition>
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-	<script src="https://cdn.rawgit.com/dzwillia/vue-simple-spinner/v1.2.5/dist/vue-simple-spinner.min.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
