--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			<button @click="showExport = true">Export</button>
 			<button @click="showImport = true">Import</button>
 		</div>
-		<export v-if="showExport" :data="data" @close="showExport = false"></export>
+		<export v-if="showExport" :data="exportData" @close="showExport = false"></export>
 		<import v-if="showImport" v-model="importedData" @close="showImport = false"></import>
-		<table-filters v-if="showFilters" :filters="filters" @close="showFilters = false" @filter="filter"></table-filters>
+		<table-filters v-if="showFilters" :filters="filters" @close="showFilters = false"></table-filters>
 		<pos-table :mats="data"></pos-table>
 		<div class="loader" v-if="!data"></div>
 	</div>
@@ -38,7 +38,7 @@
 									<h3>I want:</h3>
 									<template v-for="part in parts">
 										<div class="part">
-											<input type="checkbox" :id="part | formatId" :checked="!filters.want[part]" @click="filter(part)"/>
+											<input type="checkbox" :id="part | formatId" v-model="filters.want[part]"/>
 											<label :for="part | formatId">{{ part | formatLabel }}</label>
 										</div>
 									</template>
